# solana-2026-task

./: .gitignore  ANCHOR_BUILD_SOLUTION.md  BUILD_SUMMARY.md  COMPLETION_REPORT.md  DOCKER.md  Dockerfile  FINAL_REPORT.md  PROJECT_FILES.txt  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml
Task1/: Task1.md
Task2/: Task2.md
Task2/blueshift_anchor_vault/: .gitignore  Anchor.toml  BUILD_STATUS.md  DELIVERY_SUMMARY.md  INDEX.md  Makefile  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  START_HERE.md  USAGE_GUIDE.md  deploy.sh  package.json  setup.sh  tsconfig.json
Task2/blueshift_anchor_vault/programs/blueshift_anchor_vault/: Cargo.toml
Task2/blueshift_anchor_vault/programs/blueshift_anchor_vault/src/: lib.rs
Task3/: BUILD_FINAL_STATUS.md  EDITION2024_FIX.md  STANDARD_IMPLEMENTATION.md  TEST_PLATFORM_FIX.md  Task3.md
Task3/blueshift_anchor_escrow/: Anchor.toml  BUILD_FIX.md  BUILD_IMPOSSIBLE.md  BUILD_ISSUE.md  BUILD_STATUS.md  Makefile  README.md  package.json  setup.sh
Task3/blueshift_anchor_escrow/programs/blueshift_anchor_escrow/: Cargo.toml
Task3/blueshift_anchor_escrow/programs/blueshift_anchor_escrow/src/: errors.rs  lib.rs  state.rs
Task3/blueshift_anchor_escrow/programs/blueshift_anchor_escrow/src/instructions/: make.rs  mod.rs  refund.rs  take.rs
Task4/: Task4.md
Task5/: LAMPORTS_FIX.md  STANDARD_IMPLEMENTATION.md  Task5.md
Task5/blueshift_escrow/: COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md
Task6/: Task6.md
Task6/blueshift_native_amm/: ACCOUNT_ORDER.md  CLIENT_GUIDE.md  FINAL_FIX.md  FINAL_FIX_SUMMARY.md  FINAL_VERSION.md  FIX_SUMMARY.md  FIX_SUMMARY_V3.md  FIX_V10_COMPLETE.md  FIX_V7.md  FIX_V9.md  (+5 more)
(+13 files in other folders)
