[package]
name = "blueshift_anchor_vault"
version = "0.1.0"
description = "一个简单的 Solana 金库程序，使用 Anchor 框架开发"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blueshift_anchor_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
